IDEX-2546: fixed problem with displaying buttons on the runner panel on Safari

--- a/plugin-runner/che-plugin-runner-ext-runner/src/main/resources/org/eclipse/che/ide/ext/runner/client/runner.css
+++ b/plugin-runner/che-plugin-runner-ext-runner/src/main/resources/org/eclipse/che/ide/ext/runner/client/runner.css
@@ -101,6 +101,8 @@
     margin-top: -3px;
     fill: #dbdbdb !important;
     stroke: #dbdbdb !important;
+    width: 20px !important;
+    height: 19px !important;
 }
 
 .fontSizeTwelve {
